# xtc

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/xtc/: cuda.h  mpi.h  omp.h
src/xtc/cpp/: CMakeLists.txt  timer.h
src/xtc/cuda/: CMakeLists.txt  error.h  misc.h  timer.h
src/xtc/mpi/: CMakeLists.txt  logger.h  runtime.h  timer.h
test/: CMakeLists.txt  test.cc
